# rapready-one

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RESEARCH.md
.github/workflows/: build.yml
Source/: AdvancedPanel.cpp  AdvancedPanel.h  OfflineRenderer.cpp  OfflineRenderer.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Theme.h
Source/Dsp/: RapReadyDSP.cpp  RapReadyDSP.h
tests/: DspTests.cpp  renderer_tail_test.py
tools/: Build-Windows.ps1  Install-VST3.ps1  RenderMain.cpp
